--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import PokemonCard from "@/components/pokemons/PokemonCard.astro";
+import Title from "@/components/shared/Title.astro";
 import type { PokemonListResponse } from "@/interfaces/pokemon-list.response";
 
 import MainLayout from "@/layouts/MainLayout.astro";
@@ -11,8 +12,7 @@ const title = 'Pokémon Static | Home'
 ---
 
 <MainLayout title={title}>
-		<h1 class="text-3xl">Listado de Pokémons</h1>
-		<hr>
+		<Title>Listado de Pokémons</Title>
 		<section aria-label="Listado de pokemon"
 		class="grid grid-col-1 sm:grid-cols-4 md:grid-cols-5 gap-4 mt-5">
 			{
