--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -4,6 +4,7 @@ import type { PokemonListResponse } from "@/interfaces/pokemon-list.response";
 
 import MainLayout from "@/layouts/MainLayout.astro";
 import PokemonCard from "@/components/pokemons/PokemonCard.astro";
+import Title from "@/components/shared/Title.astro";
 
 export const getStaticPaths = (async () => {
 
@@ -37,7 +38,7 @@ image={imageSrc} >
     <section class="mt-10 mx-10 flex flex-col justify-center items-center">
         <div>
             <a href="/">Regresar</a>
-            <h1 class="text-5xl capitalize">{name}</h1>
+            <Title>{name}</Title>
         </div>
         <PokemonCard name={name} url={url} isBig/>
 
