--- a/src/pages/pokemons/[page].astro
+++ b/src/pages/pokemons/[page].astro
@@ -4,6 +4,7 @@ import type { PokemonListResponse } from "@/interfaces/pokemon-list.response";
 
 import MainLayout from "@/layouts/MainLayout.astro";
 import PokemonCard from "@/components/pokemons/PokemonCard.astro";
+import Title from "@/components/shared/Title.astro";
 
 export const getStaticPaths = (async ({paginate}) => {
 	const resp = await fetch('https://pokeapi.co/api/v2/pokemon?limit=151');
@@ -19,8 +20,7 @@ console.log("🚀 ~ page:", page)
 ---
 
 <MainLayout title={title}>
-	<h1 class="text-3xl">Listado de Pokémons</h1>
-	<hr>
+	<Title>Listado páginado</Title>
 	<section aria-label="Listado de pokemon"
 	class="grid grid-col-1 sm:grid-cols-4 md:grid-cols-5 gap-4 mt-5">
 		{
