--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -37,7 +37,8 @@ image={imageSrc} >
 
     <section class="mt-10 mx-10 flex flex-col justify-center items-center">
         <div>
-            <a href="/">Regresar</a>
+            <!-- <a href="/">Regresar</a> -->
+             <button onclick="history.back()" class="text-blue-500">Regresar</button>
             <Title>{name}</Title>
         </div>
         <PokemonCard name={name} url={url} isBig/>
