Hearth in single pokemon

--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -2,6 +2,8 @@
 import type { GetStaticPaths } from "astro";
 import type { PokemonListResponse } from "@/interfaces/pokemon-list.response";
 
+import { Icon } from "astro-icon/components";
+
 import MainLayout from "@/layouts/MainLayout.astro";
 import PokemonCard from "@/components/pokemons/PokemonCard.astro";
 import Title from "@/components/shared/Title.astro";
@@ -36,11 +38,19 @@ description={`Información sobre el pokémon ${name}`}
 image={imageSrc} >
 
     <section class="mt-10 mx-10 flex flex-col justify-center items-center">
-        <div>
-            <!-- <a href="/">Regresar</a> -->
-             <button onclick="history.back()" class="text-blue-500">Regresar</button>
-            <Title>{name}</Title>
+        <div class="flex flex-row items-end">
+            <div>
+                <!-- <a href="/">Regresar</a> -->
+                 <button onclick="history.back()" class="text-blue-500 mb-2">Regresar</button>
+                <Title>{name}</Title>
+            </div>
+    
+            <button id="btn-favorite" class="ml-4">
+                <Icon name="heart-outline" size={50} color={'#d71414'} />
+                <Icon class="hidden" name="heart-full" size={50} color={'#d71414'} />
+            </button>
         </div>
+
         <PokemonCard name={name} url={url} isBig/>
 
         <audio controls class="mt-5">
@@ -53,5 +63,9 @@ image={imageSrc} >
 <style>
     a {
         @apply hover:underline text-blue-500;
+    }
+
+    #btn-favorite {
+        @apply hover:animate-pulse;
     }
 </style>
