--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -59,6 +59,27 @@ image={imageSrc} >
         </audio>
     </section>
 </MainLayout>
+    // Lifecycle events
+    
+    // document.addEventListener('astro:before-preparation', () => {
+    //     console.log('astro:before-preparation');
+    // })
+
+    // document.addEventListener('astro:after-preparation', () => {
+    //     console.log('astro:after-preparation');
+    // })
+
+    // document.addEventListener('astro:before-swap', () => {
+    //     console.log('astro:before-swap');
+    // })
+
+    // document.addEventListener('astro:after-swap', () => {
+    //     console.log('astro:after-swap');
+    // })
+
+    // document.addEventListener('astro:page-load', () => {
+    //     console.log('astro:page-load');
+    // })
 
 <style>
     a {
