--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -45,9 +45,9 @@ image={imageSrc} >
                 <Title>{name}</Title>
             </div>
     
-            <button id="btn-favorite" class="ml-4">
-                <Icon name="heart-outline" size={50} color={'#d71414'} />
-                <Icon class="hidden" name="heart-full" size={50} color={'#d71414'} />
+            <button id="btn-favorite" class="ml-4" data-name={name} data-id={id}>
+                <Icon data-outline name="heart-outline" size={50} color={'#d71414'} />
+                <Icon data-full class="hidden" name="heart-full" size={50} color={'#d71414'} />
             </button>
         </div>
 
