--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -59,6 +59,13 @@ image={imageSrc} >
         </audio>
     </section>
 </MainLayout>
+
+<script>
+    interface FavoritePokemon {
+        name: string;
+        id: number;
+    }
+
     // Lifecycle events
     
     // document.addEventListener('astro:before-preparation', () => {
@@ -80,6 +87,57 @@ image={imageSrc} >
     // document.addEventListener('astro:page-load', () => {
     //     console.log('astro:page-load');
     // })
+
+    const handlePageLoad = () => {
+        let favoritePokemons: FavoritePokemon[] = JSON.parse(
+            localStorage.getItem('favorites') ?? '[]'
+        );
+        console.log("🚀 ~ handlePageLoad ~ favoritePokemon:", favoritePokemons)
+
+        const btnFavorite = document.querySelector(
+            '#btn-favorite'
+        ) as HTMLButtonElement;
+
+        if(!btnFavorite) return;
+
+        const name = btnFavorite.dataset.name ?? '';
+        const id = btnFavorite.dataset.id ?? '';
+
+        const heartOutline = btnFavorite.querySelector(
+            '[data-outline]'
+        ) as HTMLElement;
+
+        const heartFull = btnFavorite.querySelector(
+            '[data-full]'
+        ) as HTMLElement;
+
+        const toggleFavorite = () => {
+            const isFavorite = favoritePokemons.some(fav => fav.name === name)
+
+            if(isFavorite){
+                favoritePokemons = favoritePokemons.filter(fav => fav.name !== name);
+            } else {
+                favoritePokemons.push({
+                    id: +id,
+                    name: name,
+                })
+            }
+
+            localStorage.setItem('favorites', JSON.stringify(favoritePokemons));
+        }
+
+        btnFavorite.addEventListener('click', () => {
+            
+            heartOutline.classList.toggle('hidden');
+            heartFull.classList.toggle('hidden');
+
+            toggleFavorite();
+
+        })
+    }
+
+    document.addEventListener('astro:page-load', handlePageLoad)
+</script>
 
 <style>
     a {
