Load heart if is favorite in Single Pokemon

--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -102,6 +102,7 @@ image={imageSrc} >
 
         const name = btnFavorite.dataset.name ?? '';
         const id = btnFavorite.dataset.id ?? '';
+        const isFavorite = favoritePokemons.some(fav => fav.name === name)
 
         const heartOutline = btnFavorite.querySelector(
             '[data-outline]'
@@ -110,6 +111,11 @@ image={imageSrc} >
         const heartFull = btnFavorite.querySelector(
             '[data-full]'
         ) as HTMLElement;
+
+        if(isFavorite) {
+            heartOutline.classList.add('hidden')
+            heartFull.classList.remove('hidden')
+        }
 
         const toggleFavorite = () => {
             const isFavorite = favoritePokemons.some(fav => fav.name === name)
