--- a/src/components/shared/Title.astro
+++ b/src/components/shared/Title.astro
@@ -1,7 +1,7 @@
 ---
 ---
-<h1 class="text-5xl font-bold capitalize">
+<h1 class="text-3xl sm:text-5xl font-bold capitalize">
     <slot />
 </h1>
 
-<div class="border-b-2 border-blue-500 mt-2"></div>
+<div class="border-b-2 border-blue-500 mt-4"></div>
