--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -39,9 +39,9 @@ const { title = siteInfo.title, description = siteInfo.description, image } = As
 			}
 		 </style> -->
 	</head>
-	<body class="bg-slate-800 text-slate-100">
+	<body class="bg-slate-800 text-slate-100 flex flex-col min-h-screen">
 		<Navbar/>
-		<main class="mt-6 px-4 m-auto max-w-3xl">
+		<main class="mt-6 m-auto flex-grow w-full max-w-4xl px-4">
 			<slot/>
 		</main>
     </body>
