--- a/src/pages/pokemons/[page].astro
+++ b/src/pages/pokemons/[page].astro
@@ -15,14 +15,13 @@ export const getStaticPaths = (async ({paginate}) => {
 
 const title = 'Pokémon Static | Home'
 const { page } = Astro.props;
-console.log("🚀 ~ page:", page)
 
 ---
 
 <MainLayout title={title}>
 	<Title>Listado páginado</Title>
 	<section aria-label="Listado de pokemon"
-	class="grid grid-col-1 sm:grid-cols-4 md:grid-cols-5 gap-4 mt-5">
+	class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-4 mt-5">
 		{
 			page.data.map(({name, url}) => (
 				<PokemonCard name={name} url={url} />
