Value persistence between pages with transition:persist & transition:persist-props

--- a/src/pages/islands/index.astro
+++ b/src/pages/islands/index.astro
@@ -3,6 +3,8 @@ import { Counter } from "@/components/Counter";
 import Title from "@/components/shared/Title.astro";
 import MainLayout from "@/layouts/MainLayout.astro";
 
+const counterValue = 20;
+
 ---
 <MainLayout title="Favoritos">
     <Title>Islas</Title>
@@ -15,5 +17,10 @@ import MainLayout from "@/layouts/MainLayout.astro";
         }}
     ></div>
 
-    <Counter client:visible/>
+    <Counter 
+        transition:persist="counter"
+        transition:persist-props
+        client:visible 
+        initValue={counterValue}
+    />
 </MainLayout>
