--- a/src/pages/favorites/index.astro
+++ b/src/pages/favorites/index.astro
@@ -7,5 +7,10 @@ import MainLayout from "@/layouts/MainLayout.astro";
 <MainLayout title="Favoritos">
     <Title>Favoritos</Title>
 
-    <Counter client:load/>
+    <Counter 
+        transition:persist="counter"
+        transition:persist-props
+        client:visible 
+        initValue={15} 
+    />
 </MainLayout>
