--- a/src/pages/favorites/index.astro
+++ b/src/pages/favorites/index.astro
@@ -7,6 +7,10 @@ import MainLayout from "@/layouts/MainLayout.astro";
 <MainLayout title="Favoritos">
     <Title>Favoritos</Title>
 
+    <video controls="" autoplay="" transition:persist="playing-video" class="mt-5">
+        <source src="https://ia804502.us.archive.org/33/items/GoldenGa1939_3/GoldenGa1939_3_512kb.mp4" type="video/mp4">
+    </video>
+
     <Counter 
         transition:persist="counter"
         transition:persist-props
