--- a/src/pages/islands/index.astro
+++ b/src/pages/islands/index.astro
@@ -9,6 +9,10 @@ const counterValue = 20;
 <MainLayout title="Favoritos">
     <Title>Islas</Title>
 
+    <video controls="" autoplay="" transition:persist="playing-video" class="mt-5">
+        <source src="https://ia804502.us.archive.org/33/items/GoldenGa1939_3/GoldenGa1939_3_512kb.mp4" type="video/mp4">
+    </video>
+
     <div 
         style={{
             height: '2000px', 
