Use astro component as a children of SolidJS island

--- a/src/pages/islands/index.astro
+++ b/src/pages/islands/index.astro
@@ -26,5 +26,5 @@ const counterValue = 20;
         transition:persist-props
         client:visible 
         initValue={counterValue}
-    />
+    > <Title>Counter Island</Title> </Counter>
 </MainLayout>
