--- a/src/pages/favorites/index.astro
+++ b/src/pages/favorites/index.astro
@@ -1,5 +1,6 @@
 ---
 import { Counter } from "@/components/Counter";
+import { FavoritePokemons } from "@/components/pokemons/FavoritePokemons";
 import Title from "@/components/shared/Title.astro";
 import MainLayout from "@/layouts/MainLayout.astro";
 
@@ -7,7 +8,9 @@ import MainLayout from "@/layouts/MainLayout.astro";
 <MainLayout title="Favoritos">
     <Title>Favoritos</Title>
 
-    <video controls="" autoplay="" transition:persist="playing-video" class="mt-5">
+    <FavoritePokemons client:only="solid-js" />
+
+    <!-- <video controls="" autoplay="" transition:persist="playing-video" class="mt-5">
         <source src="https://ia804502.us.archive.org/33/items/GoldenGa1939_3/GoldenGa1939_3_512kb.mp4" type="video/mp4">
     </video>
 
@@ -16,5 +19,5 @@ import MainLayout from "@/layouts/MainLayout.astro";
         transition:persist-props
         client:visible 
         initValue={15} 
-    />
+    /> -->
 </MainLayout>
